--- a/.env
+++ b/.env
@@ -5,10 +5,18 @@
 # Nginx
 NGINX_HOST=localhost
 
+#php
+INSTALL_XDEBUG=true
+INSTALL_INTL=true
+INSTALL_IMAGE_OPTIMIZERS=true
+INSTALL_IMAGEMAGICK=true
+INSTALL_OPCACHE=true
+INSTALL_MEMCACHED=false
+INSTALL_EXIF=true
+INSTALL_PHPREDIS=true
+
 # MySQL
-MYSQL_HOST=mysql
 MYSQL_DATABASE=test
-MYSQL_ROOT_USER=root
 MYSQL_ROOT_PASSWORD=root
 MYSQL_USER=dev
 MYSQL_PASSWORD=dev
