--- a/sys/config/php/custom.ini
+++ b/sys/config/php/custom.ini
@@ -11,3 +11,8 @@ upload_max_filesize = 20M
 ; Sets max size of post data allowed.
 ; http://php.net/post-max-size
 post_max_size = 20M
+
+[mail function]
+; For Unix only.  You may supply arguments as well (default: "sendmail -t -i").
+; http://php.net/sendmail-path
+sendmail_path = /usr/sbin/sendmail -t -i
